Fixed bug where flashcard view would put scrollbar on reader panel Fixed bug where you could not scroll to the top of a long text input panel Fixed bug where the top and bottom of the screen were missing a background (invisible in light mode) Rewrote CSS to be clearer and with less duplication

--- a/src/react/styles/index.css
+++ b/src/react/styles/index.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  position: relative;
+}
+
 body, html, #root {
   margin: 0;
   padding: 0;
@@ -6,183 +11,117 @@ body, html, #root {
   overflow: hidden;
 }
 
-.panel-viewport {
+#layout {
+  display: flex;
+  flex-flow: column nowrap;
   height: 100vh;
   width: 100vw;
 }
 
-.panel-viewport, #horizontal-panel-container, #vertical-panel-container, #zoom-container, #flashcard-container {
-  max-height: calc(100vh - 100px);
+#panel-viewport {
+  flex-grow: 1;
+  /* flex items have min-{flex-direction}: auto - we need min-height to allow large content to shrink
+     https://stackoverflow.com/a/66689926 */
+  min-height: 0;
+}
+
+#panel-viewport > div {
+  display: flex;
   overflow: auto;
+  height: 100%;
 }
 
 #reader-display-panel, #text-input-panel {
   display: flex;
   flex-direction: column;
-  min-height: 200px;
-  min-width: 200px;
   overflow: auto;
-  box-sizing: border-box;
   text-align: left;
-}
-
-#horizontal-panel-container {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  overflow: auto;
-}
-
-#horizontal-panel-container > :nth-child(1) {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-#horizontal-panel-container > :nth-child(3) {
-  display: flex;
-  padding: 5%;
-  box-sizing: border-box;
-  min-height: 200px;
-  min-width: 200px;
-}
-
-#vertical-panel-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
-}
-
-#vertical-panel-container > :nth-child(1) {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-#vertical-panel-container > :nth-child(3) {
-  display: flex;
-  position: relative;
-  padding-left: 30%;
-  padding-right: 30%;
-  box-sizing: border-box;
 }
 
 .resize-bar-vertical, .resize-bar-horizontal {
   background-color: #888;
+  border-radius: 10px;
   user-select: none;
   z-index: 10;
 }
 
-
 .resize-bar-vertical {
   width: 5px;
   cursor: col-resize;
-  background-color: #888;
-  user-select: none;
-  z-index: 10;
-  border-radius: 10px;
 }
 
 .resize-bar-horizontal {
   height: 5px;
   cursor: row-resize;
-  background-color: #888;
-  user-select: none;
-  z-index: 10;
-  border-radius: 10px;
 }
 
-
-#zoom-container {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  overflow: auto;
+#reader-display-panel {
   align-items: center;
-  position: relative;
+  justify-content: center;
 }
 
-#zoom-container > :nth-child(1) {
+#horizontal-panel-container > #text-input-panel {
+  padding: 5%;
+}
+
+#vertical-panel-container {
+  flex-direction: column;
+}
+
+#horizontal-panel-container > #text-input-panel,
+#horizontal-panel-container > #reader-display-panel {
+  min-width: 200px;
+}
+
+#vertical-panel-container > #text-input-panel,
+#vertical-panel-container > #reader-display-panel {
+  min-height: 200px;
+}
+
+#zoom-container > #reader-display-panel {
   width: 100%;
   height: 100%;
   transition: transform 0.3s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative
 }
 
-#zoom-container > :nth-child(2) {
+#zoom-container > #text-input-panel {
   position: absolute;
   bottom: 10px;
   right: 10px;
-  width: 100px;
-  height: 100px;
-  overflow: auto;
+  width: 200px;
+  height: 200px;
   padding: 4px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-
-#zoom-container > :nth-child(2) {
-  align-self: stretch;
-  display: inline;
 }
 
 #flashcard-container {
-  display: flex;
-  height: 100vh;
-  width: 100vw;
-  overflow: auto;
   perspective: 1000px;
   align-items: center;
-  position: relative;
 }
 
-#flashcard-container > :nth-child(1) {
-  position: absolute;
-  backface-visibility: hidden;
-  transition: transform 0.0s;
-  width: 100%;
-  overflow: auto;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-#flashcard-container > :nth-child(2) {
-  display: flex;
+/* TODO: bootstrap-like "col" for text input */
+#vertical-panel-container > #text-input-panel,
+#flashcard-container > #text-input-panel {
   padding-left: 30%;
   padding-right: 30%;
-  box-sizing: border-box;
+}
+
+#flashcard-container > #reader-display-panel,
+#flashcard-container > #text-input-panel  {
   position: absolute;
-  backface-visibility: hidden;
-  transition: transform 0.0s;
+  max-height: 100%;
   width: 100%;
-  overflow: auto;
-  height: auto;
+  align-items: center;
+  backface-visibility: hidden;
+
+  transition: transform 0.0s;
 }
 
-#flashcard-container > :nth-child(1) {
+#flashcard-container > #reader-display-panel,
+#flashcard-container.flipped > #text-input-panel  {
   transform: rotateY(0deg);
 }
 
-#flashcard-container > :nth-child(2) {
+#flashcard-container > #text-input-panel,
+#flashcard-container.flipped > #reader-display-panel {
   transform: rotateY(180deg);
-}
-
-#flashcard-container.flipped > :nth-child(1) {
-  transform: rotateY(180deg);
-}
-
-#flashcard-container.flipped > :nth-child(2) {
-  transform: rotateY(0deg);
 }
